# PPA-FS25-World-Generation

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.hpp  run_benchmarks.sh
scipts/: plot_graph.py  run_benchmarks.sh  run_cuda_bench.sh
src/: benchmark.hpp  heightmap_gen.hpp  perlin_noise_cpu.hpp  perlin_noise_cuda.cu  perlin_noise_cuda.hpp  perlin_noise_hybrid.cu  perlin_noise_hybrid.hpp
